# vrp-prediction

./: .env.example  .env.security.md  .env.template  .gitignore  .pre-commit-config.yaml  CHART_FIX_PLAN.md  CLAUDE.md  CLEAN_SYSTEM_STATUS.md  CORRECTED_MODEL_SPECIFICATION.md  CRITICAL_REVIEW_REPORT.md  DATA_LEAKAGE_CORRECTION_REPORT.md  FINAL_ACHIEVEMENT_REPORT.md  GITHUB_REFERENCES.md  LICENSE  PAPER_MODEL_SPECIFICATION.md  PROBLEM_SOLVING_MASTERPLAN.md  PROJECT_REDESIGN.md  PROJECT_REFACTORING_SUMMARY.md  PROJECT_STRUCTURE.md  R2_PERFORMANCE_BREAKTHROUGH_REPORT.md  R2_SUCCESS_ACHIEVEMENT_REPORT.md  README.md  REFACTORING_PLAN.md  STREAMLIT_DASHBOARD.md  TECHNICAL_INDICATORS_GLOSSARY.md  analyze_spy_data.py  app.py  app_5day.py  backtest_results.txt  check-dates.js  create_spy_data.py  create_synthetic_predictions.py  data_leakage_corrective_measures.py  data_leakage_emergency_audit.py  debug-chart-analysis.js  debug-chart-dates.html  debug-chart-overflow.html  emergency_data_leakage_audit.json  extract_2025_data.py  financial_forecasting_main.py  (+32 more)
.claude/: settings.local.json
analysis_results/: comprehensive_report.md
archive/: README.md  수익예측모델_학습계획.txt
backup/: app_backup_20251226.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
config/: Dockerfile  __init__.py  app-config.json  constants.py  default.yaml  docker-compose.yml  production.yaml  requirements.txt
dashboard/: .env.example  .eslintrc.json  README.md  advanced_improvement_roadmap.py  api_server.py  chart-test.html  chart-utils.js  common-functions.js  create_advanced_visualization.py  create_experiment_visualization.py  daily_predictions.json  dashboard.js  debug_yfinance.py  enhanced_spy_predictor.py  generate_daily_predictions.py  generate_news_analysis_data.py  generate_predicted_prices.py  index.html  index_backup.html  llm_sentiment_analyzer.py  model_diagnosis_report.py  model_improvement_analysis.py  model_validation_enhancement.py  news_data_collector.py  news_sentiment_llm_plan.md  next_steps_roadmap.py  package-lock.json  package.json  quick_improvement_implementation.py  quick_model_fix.py  real_api_server.py  real_stock_api.py  requirements.txt  router.js  server.py  spy_advanced_experiment.py  spy_improvement_experiment.py  spy_improvement_experiment_fixed.py  stop-servers.sh  styles.css  (+3 more)
data/: experiment_registry.json  final_performance_validation_20250922_120511.json  fold_validation_results.csv  model_comparison.csv  performance_summary.csv  statistical_analysis.csv  validation_report_auto.json
diagrams/: 01_vrp_concept.drawio  02_research_gap.drawio  03_hypothesis.drawio  04_pipeline.drawio  08_vix_beta.drawio  09_conclusion.drawio  10_research_flow.drawio
docs/: DATA_INTEGRITY_GUIDE.md  EXPERIMENT_LOG.md  IMPROVEMENT_ROADMAP.md  INDEX.md  PRODUCTION_READY_MODEL_RECOMMENDATION.md  PROJECT_INSIGHTS.md  README.md  SCI 출판 가능성 객관적 평가.txt  TFT_FINBERT_STATUS.md  dashboard_content.md  dashboard_structure.txt  dashboard_summary.md  flowchart_usage.txt  research_summary.txt  vrp_prediction_paper.md  논문 리뷰 및 비판적 분석.txt  새 텍스트 문서.txt
models/: experiment_log_20250903_142008.json  spy_training_log_20250903_142108.json
paper/: PAPER_ABSTRACT.md  PAPER_INTRODUCTION.md  PAPER_REFERENCES.bib  PAPER_STRUCTURE.md  PAPER_SUBMISSION_STATUS.md  README.md  additional_experiments.json  additional_experiments.py  additional_improvements.py  additional_research.json  additional_research.py  create_diagrams.py  create_drawio.py  dashboard_sections.py  data_leakage_check.json  data_leakage_check.py  extended_experiments.json  extended_experiments.py  final_check.json  final_check.py  final_experiments.json  final_experiments.py  final_tables.json  generate_final_tables.py  limitation_solutions.py  limitation_solutions_results.json  model_benchmark.json  model_benchmark.py  paper_tables.json  paper_tables.py  paper_tables_final.json  performance_improvement.py  performance_improvement_results.json  performance_improvement_v2.json  performance_improvement_v2.py  performance_improvement_v3.json  performance_improvement_v3.py  pre.txt  prediction_data.json  r2_improvement.json  (+29 more)
references/: references.bib  vixnvrp_refer.txt
requirements/: base.txt  dev.txt  prod.txt
scripts/: monitor_optimization.py  quick_integrity_check.py  run_gradient_optimization.sh  setup.sh
sections/: __init__.py  analysis.py  header.py  methodology.py  model_explainability.py  references.py  results.py
src/: __init__.py  academic_asset_analysis.py  advanced_experiment.py  advanced_strategies.py  advanced_strategies_phase2.py  advanced_todo_experiments.py  bias_correction_experiment.py  compute_correlation.py  extended_asset_analysis.py  extended_sci_experiment.py  full_model_experiment.py  generate_dashboard_data.py  generate_paper_figures.py  gpu_tuning.py  improved_model_comparison.py  leakage_verification.py  main.py  model_asset_matrix.py  multi_model_comparison.py  nnls_replication.py  paper_publication_experiments.py  paper_statistics.py  prediction_5day.py  prediction_5day_additional.py  prediction_5day_advanced.py  prediction_5day_boost.py  prediction_5day_comprehensive.py  prediction_5day_matrix.py  prediction_5day_optimize.py  prediction_5day_tuning.py  prediction_5day_verify.py  robust_experiment.py  sci_experiment.py  sci_journal_experiments.py  sci_quality_experiments.py  spy_alternative.py  spy_leakage_free.py  spy_optimization.py  spy_predictions_viz.py  spy_target_010.py  (+10 more)
tests/: conftest.py  test_unified_systems.py
(+729 files in other folders)
